--- a/template/blogs.html
+++ b/template/blogs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Thay đổi thông tin</title>
+    <title>Danh mục Blog</title>
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
     <link rel="stylesheet"
@@ -18,7 +18,6 @@
             crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/blogs.css">
-    <title>Chính sách</title>
 </head>
 <body class="d-flex flex-column min-vh-100">
 
@@ -113,7 +112,7 @@
                     <div class="blog-card h-100">
                         <img src="https://www.pnj.com.vn/blog/wp-content/uploads/2022/07/Nguon-goc-tao-nen-tinh-hoa-cua-da-quy-nhung-dieu-ban-chua-biet-ve-da-quy.jpg"
                              class="img-fluid rounded mb-3" alt="Blog 1">
-                        <h5 class="mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h5>
+                        <h4 class="fw-semibold mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h4>
                         <div class="d-flex justify-content-between">
                             <span class="text-muted mb-1">Tên tác giả</span>
                             <span class="text-muted mb-1">01/11/2024</span>
@@ -121,7 +120,7 @@
                         <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab delectus
                             eaque expedita illum ipsa nulla quam quis quos temporibus. A amet commodi deserunt
                             doloremque facere optio perferendis placeat repudiandae sit.</p>
-                        <a class="fs-5 text-decoration-none fw-semibold text-warning" href="#">Xem chi tiết <i class="bi bi-arrow-right"></i></a>
+                        <a class="fs-5 text-decoration-none fw-semibold text-warning" href="#">Xem chi tiết <i class="bi bi-arrow-right-short"></i></a>
                     </div>
                 </div>
                 <!-- Blog 2 -->
@@ -129,7 +128,7 @@
                     <div class="blog-card h-100">
                         <img src="https://www.pnj.com.vn/blog/wp-content/uploads/2022/07/Nguon-goc-tao-nen-tinh-hoa-cua-da-quy-nhung-dieu-ban-chua-biet-ve-da-quy.jpg"
                              class="img-fluid rounded mb-3" alt="Blog 2">
-                        <h5 class="mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h5>
+                        <h4 class="fw-semibold mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h4>
                         <div class="d-flex justify-content-between">
                             <span class="text-muted mb-1">Tên tác giả</span>
                             <span class="text-muted mb-1">01/11/2024</span>
@@ -137,7 +136,7 @@
                         <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab delectus
                             eaque expedita illum ipsa nulla quam quis quos temporibus. A amet commodi deserunt
                             doloremque facere optio perferendis placeat repudiandae sit.</p>
-                        <a class="fs-5 text-decoration-none fw-semibold text-warning" href="#">Xem chi tiết <i class="bi bi-arrow-right"></i></a>
+                        <a class="fs-5 text-decoration-none fw-semibold text-warning" href="#">Xem chi tiết <i class="bi bi-arrow-right-short"></i></a>
                     </div>
                 </div>
                 <!-- Blog 3 -->
@@ -145,7 +144,7 @@
                     <div class="blog-card h-100">
                         <img src="https://www.pnj.com.vn/blog/wp-content/uploads/2022/07/Nguon-goc-tao-nen-tinh-hoa-cua-da-quy-nhung-dieu-ban-chua-biet-ve-da-quy.jpg"
                              class="img-fluid rounded mb-3" alt="Blog 3">
-                        <h5 class="mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h5>
+                        <h4 class="fw-semibold mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h4>
                         <div class="d-flex justify-content-between">
                             <span class="text-muted mb-1">Tên tác giả</span>
                             <span class="text-muted mb-1">01/11/2024</span>
@@ -153,7 +152,7 @@
                         <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab delectus
                             eaque expedita illum ipsa nulla quam quis quos temporibus. A amet commodi deserunt
                             doloremque facere optio perferendis placeat repudiandae sit.</p>
-                        <a class="fs-5 text-decoration-none fw-semibold text-warning" href="#">Xem chi tiết <i class="bi bi-arrow-right"></i></a>
+                        <a class="fs-5 text-decoration-none fw-semibold text-warning" href="#">Xem chi tiết <i class="bi bi-arrow-right-short"></i></a>
                     </div>
                 </div>
             </div>
@@ -168,7 +167,7 @@
                     <img src="https://www.pnj.com.vn/blog/wp-content/uploads/2022/07/Nguon-goc-tao-nen-tinh-hoa-cua-da-quy-nhung-dieu-ban-chua-biet-ve-da-quy.jpg"
                          alt="Thumbnail 1" class="blog-thumbnail me-3">
                     <div>
-                        <h5 class="blog-title mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h5>
+                        <h4 class="blog-title fw-bold mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h4>
                         <p class="text-muted mb-1">Tên tác giả | 01/11/2024</p>
                         <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab delectus
                             eaque expedita illum ipsa nulla quam quis quos temporibus. A amet commodi deserunt
@@ -182,7 +181,7 @@
                     <img src="https://www.pnj.com.vn/blog/wp-content/uploads/2022/07/Nguon-goc-tao-nen-tinh-hoa-cua-da-quy-nhung-dieu-ban-chua-biet-ve-da-quy.jpg"
                          alt="Thumbnail 1" class="blog-thumbnail me-3">
                     <div>
-                        <h5 class="blog-title mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h5>
+                        <h4 class="blog-title fw-bold mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h4>
                         <p class="text-muted mb-1">Tên tác giả | 01/11/2024</p>
                         <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab delectus
                             eaque expedita illum ipsa nulla quam quis quos temporibus. A amet commodi deserunt
@@ -196,7 +195,7 @@
                     <img src="https://www.pnj.com.vn/blog/wp-content/uploads/2022/07/Nguon-goc-tao-nen-tinh-hoa-cua-da-quy-nhung-dieu-ban-chua-biet-ve-da-quy.jpg"
                          alt="Thumbnail 1" class="blog-thumbnail me-3">
                     <div>
-                        <h5 class="blog-title mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h5>
+                        <h4 class="blog-title fw-bold mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h4>
                         <p class="text-muted mb-1">Tên tác giả | 01/11/2024</p>
                         <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab delectus
                             eaque expedita illum ipsa nulla quam quis quos temporibus. A amet commodi deserunt
@@ -210,7 +209,7 @@
                     <img src="https://www.pnj.com.vn/blog/wp-content/uploads/2022/07/Nguon-goc-tao-nen-tinh-hoa-cua-da-quy-nhung-dieu-ban-chua-biet-ve-da-quy.jpg"
                          alt="Thumbnail 1" class="blog-thumbnail me-3">
                     <div>
-                        <h5 class="blog-title mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h5>
+                        <h4 class="blog-title fw-bold mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h4>
                         <p class="text-muted mb-1">Tên tác giả | 01/11/2024</p>
                         <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab delectus
                             eaque expedita illum ipsa nulla quam quis quos temporibus. A amet commodi deserunt
@@ -224,7 +223,7 @@
                     <img src="https://www.pnj.com.vn/blog/wp-content/uploads/2022/07/Nguon-goc-tao-nen-tinh-hoa-cua-da-quy-nhung-dieu-ban-chua-biet-ve-da-quy.jpg"
                          alt="Thumbnail 1" class="blog-thumbnail me-3">
                     <div>
-                        <h5 class="blog-title mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h5>
+                        <h4 class="blog-title fw-bold mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h4>
                         <p class="text-muted mb-1">Tên tác giả | 01/11/2024</p>
                         <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab delectus
                             eaque expedita illum ipsa nulla quam quis quos temporibus. A amet commodi deserunt
@@ -238,7 +237,7 @@
                     <img src="https://www.pnj.com.vn/blog/wp-content/uploads/2022/07/Nguon-goc-tao-nen-tinh-hoa-cua-da-quy-nhung-dieu-ban-chua-biet-ve-da-quy.jpg"
                          alt="Thumbnail 1" class="blog-thumbnail me-3">
                     <div>
-                        <h5 class="blog-title mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h5>
+                        <h4 class="blog-title fw-bold mb-2">Nguồn gốc tạo nên tinh hoa của đá quý & những điều bạn chưa biết về đá quý</h4>
                         <p class="text-muted mb-1">Tên tác giả | 01/11/2024</p>
                         <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab delectus
                             eaque expedita illum ipsa nulla quam quis quos temporibus. A amet commodi deserunt
