--- a/template/css/blogs.css
+++ b/template/css/blogs.css
@@ -1,3 +1,11 @@
+* {
+    box-sizing: border-box;
+}
+
+main {
+    font-family: 'Montserrat', serif; !important;
+}
+
 .blog-card {
     background-color: #f8f9fa;
     padding: 15px;
