--- a/Web_Project/src/main/webapp/css/login.css
+++ b/Web_Project/src/main/webapp/css/login.css
@@ -1,7 +1,3 @@
-
-
-
-
 html, body {
 	height: 100%;
 }
@@ -48,4 +44,10 @@ body {
 .error-txt {
 	font-size: 14px;
 	color: #f02849;
+}
+
+.form-forgotPass {
+	width: 100%;
+	max-width: 500px;
+	margin-top: 100px;
 }
