--- a/Web_Project/src/main/webapp/css/home.css
+++ b/Web_Project/src/main/webapp/css/home.css
@@ -35,3 +35,12 @@ footer {
 	max-width: 100%; /* Đảm bảo chiều rộng tối đa của mô tả */
 }
 
+.category .card {
+	height: 380px;
+  	max-width: 303px;
+}
+
+.category img {
+	height: 300px;
+  	object-fit: cover;
+}
